--- a/dask_material/config.yaml
+++ b/dask_material/config.yaml
@@ -2,16 +2,11 @@
 
 worker:
   env:
-    - name: EXTRA_CONDA_PACKAGES
-      value: scipy scikit-learn keras -c conda-forge
     - name: EXTRA_PIP_PACKAGES
-      value: dask-ml --upgrade
+      value: scipy scikit-learn keras tensorflow==2.0.0-alpha0 dask-ml --upgrade
 
 # We want to keep the same packages on the worker and jupyter environments
 jupyter:
-  enabled: true
   env:
-    - name: EXTRA_CONDA_PACKAGES
-      value: scipy seaborn scikit-learn keras matplotlib -c conda-forge
     - name: EXTRA_PIP_PACKAGES
-      value: dask-ml --upgrade
+      value: scipy seaborn scikit-learn keras matplotlib tensorflow==2.0.0-alpha0 dask-ml --upgrade
